# Rust_sample_code_01

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2025-04-16-091833_create_posts_tags/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/routes/: posts.rs  users.rs
